# open62541_libs

./: CHANGELOG.md  README.md  flake.nix  pubspec.yaml
.github/workflows/: build_example.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
elinux/: CMakeLists.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/open62541_libs_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: .gitignore  open62541_libs.podspec
ios/Classes/: open62541_libs.c
lib/: open62541_libs.dart  open62541_libs_bindings_generated.dart
linux/: CMakeLists.txt
macos/: .gitignore  open62541_libs copy.podspec  open62541_libs.podspec
src/: CMakeLists.txt  open62541_libs.c
windows/: CMakeLists.txt
